--- a/web pages copy/index/index.css
+++ b/web pages copy/index/index.css
@@ -58,7 +58,7 @@ body {
 
 h1, h2, h3, p {
 	font-family: sans-serif;
-	font-size: 2rem;
+	font-size: 1rem;
 }
 
 h1 {
@@ -68,9 +68,11 @@ h1 {
 
 button {
 	font-family: sans-serif;
-	font-size: 3rem;
+	font-size: 2rem;
 	margin: 2%;
-	padding: 0 3%;
+	padding: 1% 2%;
+	border-radius: 10%;
+	width: 200px;
 }
 
 header.header {
@@ -80,25 +82,45 @@ header.header {
 	background: #00A3DD;
 	padding: 2rem;
 	border-bottom: #000000 solid 5px;
-	text-align: center;
 }
 
 h2, h3 {
 	text-align: center;
+	font-weight: bold;
+	font-size: 2rem;
+	width: 80%;
+}
+
+h3 {
+	margin-bottom: 2%;
 }
 
 hr {
 	border: solid black 1px;
 	margin: 3%;
-}
-
-img.image {
-	margin: 0 auto;
 	width: 50%;
 }
 
+hr#border {
+	border: solid black 3px;
+	margin: 3%;
+	width: 90%;
+	padding-right: 94%;
+}
+
+.image {
+	padding: 5%;
+}
+
+section.sectionOne, .sectionTwo{
+	display:flex;
+	flex-direction: column;
+	align-items: center;
+	
+}
+
 p.info {
-	width: 60%;
+	width: 70%;
 	margin: 0 auto;
 	text-align: justify;
 }
@@ -107,11 +129,58 @@ footer {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	
 	background: #00A3DD;
 	padding: 2rem;
 	border-top: #000000 solid 5px;
+	margin-top: 5%;
 }
 
-footer.footerButtons {
-	display: inline;
+.footerButton button{
+	/* font-family: sans-serif;
+	/* font-size: 2rem; */
+	/* margin: 2%;
+	padding: 1% 2%;
+	border-radius: 10%;
+	width: 200px; */ */
+}
+
+p.footerP {
+	margin-bottom: 2%;
+}
+
+@media(max-width: 800px){
+
+	h1 {
+		font-size: 4rem;
+	}
+
+	button {
+		font-size: 1.5rem;
+	}
+
+	.footerbutton {
+		font-size: 1.5rem;
+	}
+
+	 h2, h3 {
+		font-size: 1.5rem;
+	}
+
+}
+
+@media(max-width: 500px){
+
+	button {
+		font-size: 1.25rem;
+	}
+
+	h2, h3 {
+		font-size: 1.25rem;
+		width: 90%
+	}
+
+	p {
+		font-size: 1rem;
+	} 
 }
