--- a/web pages copy/about/about.css
+++ b/web pages copy/about/about.css
@@ -75,6 +75,12 @@ button {
 	margin: 2%;
 	padding: 1% 2%;
 	border-radius: 10%
+
+}
+
+button a {
+	color: #000000;
+	text-decoration: none;
 }
 
 h1 {
