--- a/web pages copy/about/about.css
+++ b/web pages copy/about/about.css
@@ -74,8 +74,8 @@ button {
 	font-size: 3rem;
 	margin: 2%;
 	padding: 1% 2%;
-	border-radius: 10%
-
+	border-radius: 10%;
+	width: 200px;
 }
 
 button a {
