--- a/web pages copy/about/about.css
+++ b/web pages copy/about/about.css
@@ -71,11 +71,12 @@ h1, h2, p, nav{
 
 button {
 	font-family: sans-serif;
-	font-size: 3rem;
+	font-size: 2rem;
 	margin: 2%;
 	padding: 1% 2%;
 	border-radius: 10%;
 	width: 200px;
+	font-weight: bold;
 }
 
 button a {
@@ -189,7 +190,7 @@ footer {
 	}
 
 	button {
-		font-size: 2rem;
+		font-size: 1.5rem;
 		margin-top: 5%;
 	 }
 
@@ -217,4 +218,7 @@ footer {
 		font-size: 1rem;
 	}
 
+	button {
+		font-size: 1rem;
+	}
 }
