--- a/web pages copy/index/index.css
+++ b/web pages copy/index/index.css
@@ -73,6 +73,7 @@ button {
 	padding: 1% 2%;
 	border-radius: 10%;
 	width: 200px;
+	font-weight: bold;
 }
 
 button a {
@@ -139,15 +140,6 @@ footer {
 	padding: 2rem;
 	border-top: #000000 solid 5px;
 	margin-top: 5%;
-}
-
-.footerButton button{
-	/* font-family: sans-serif;
-	/* font-size: 2rem; */
-	/* margin: 2%;
-	padding: 1% 2%;
-	border-radius: 10%;
-	width: 200px; */ */
 }
 
 p.footerP {
