--- a/about.css
+++ b/about.css
@@ -138,12 +138,14 @@ section {
 	padding: 1%;
 }
 
+/* Alternating background colors in sections */
 #secOne, #secThree, #secFive {
 	background: #1EB53A;
 	border-top: #000000 solid 5px;
 	justify-content: space-around;
 }
 
+/* Alternating background colors in sections */
 #secTwo, #secFour {
 	background: #FCD116;
 	border-top: #000000 solid 5px;
@@ -160,22 +162,22 @@ footer {
 	border-top: #000000 solid 5px;
 }
 
-/* #footerButton {
-	padding: 1% 2%;
-} */
-
 @media(max-width: 800px){
 
+	/* Switched to column here */
 	#secOne, #secThree, #secFive {
 		flex-direction: column;
 		align-items: center;
 		justify-content: space-around;
+		flex-wrap: wrap;
 	}
 
+	/* Switched to column here */
 	#secTwo, #secFour {
 		flex-direction: column;
 		align-items: center;
 		justify-content: space-around;
+		flex-wrap: wrap;
 	}
 	
 	h1 {
@@ -214,4 +216,23 @@ footer {
 	button {
 		font-size: 1rem;
 	}
+}
+
+@media(max-width: 400px){
+	
+	h1 {
+		font-size: 2.5rem
+	}
+	
+	button {
+		font-size: 1rem;
+	}
+
+	h2 {
+		font-size: 1rem;
+	}
+
+	p, nav a {
+		font-size: .75rem;
+	} 
 }
