--- a/index.css
+++ b/index.css
@@ -101,12 +101,15 @@ h3 {
 	margin-bottom: 2%;
 }
 
+/* heading divider */
 hr {
 	border: solid black 1px;
 	margin: 3%;
 	width: 50%;
+	color: #000000;
 }
 
+/* section border */
 hr#border {
 	border: solid black 3px;
 	margin: 3%;
@@ -155,6 +158,13 @@ p.footerP {
 		font-size: 1.5rem;
 	}
 
+	/* Making images reactive here */
+	.image img{
+		width: 95%;
+		height: 95%;
+		padding-left: 5%;
+	}
+
 	.footerbutton {
 		font-size: 1.5rem;
 	}
@@ -166,9 +176,13 @@ p.footerP {
 }
 
 @media(max-width: 500px){
-
+	
 	button {
 		font-size: 1.25rem;
+	}
+
+	h1 {
+		font-size: 3rem;
 	}
 
 	h2, h3 {
@@ -178,5 +192,25 @@ p.footerP {
 
 	p {
 		font-size: 1rem;
+	} 
+}
+
+@media(max-width: 400px){
+	
+	h1 {
+		font-size: 2.5rem
+	}
+	
+	button {
+		font-size: 1rem;
+	}
+
+	h2, h3 {
+		font-size: 1rem;
+		width: 90%
+	}
+
+	p {
+		font-size: .75rem;
 	} 
 }
